refactor to multi-module

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
-# Gradle properties
+#Gradle
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
 
+#Quarkus
 quarkusPluginId=io.quarkus
 quarkusPluginVersion=3.26.1
 quarkusPlatformGroupId=io.quarkus.platform
