--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ pluginManagement {
 rootProject.name='shipment-demo'
 
 include 'shipment-service'
-//include 'scanner-service'
-//include 'shared-common'
+include 'scanner-service'
+include 'tracking-service'
