--- a/shipment-service/src/main/resources/application.properties
+++ b/shipment-service/src/main/resources/application.properties
@@ -6,10 +6,11 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/demo?currentSchema=
 %dev.quarkus.hibernate-orm.log.sql=true
 %dev.quarkus.hibernate-orm.statistics=true
 
-mp.messaging.outgoing.shipment-events.connector=smallrye-kafka
-mp.messaging.outgoing.shipment-events.topic=shipment-events
-mp.messaging.outgoing.shipment-events.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.shipment-events.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.shipment-created.connector=smallrye-kafka
+mp.messaging.outgoing.shipment-created.topic=shipment-created
+mp.messaging.outgoing.shipment-created.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.shipment-created.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
 
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
