--- a/tracking-service/src/main/resources/application.properties
+++ b/tracking-service/src/main/resources/application.properties
@@ -6,9 +6,15 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/demo?currentSchema=
 %dev.quarkus.hibernate-orm.log.sql=true
 %dev.quarkus.hibernate-orm.statistics=true
 
+mp.messaging.incoming.shipment-created.connector=smallrye-kafka
+mp.messaging.incoming.shipment-created.topic=shipment-created
+mp.messaging.incoming.shipment-created.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.shipment-created.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.shipment-created.auto.offset.reset=earliest
+
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
-# %dev.quarkus.flyway.clean-at-start=true
+#%dev.quarkus.flyway.clean-at-start=true
 %dev.quarkus.flyway.migrate-at-start=true
 
 #%dev.quarkus.datasource.dev-ui.allow-sql=true
@@ -16,3 +22,4 @@ quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.C
 kafka.bootstrap.servers=localhost:9092
 
 quarkus.http.port=8083
+
