recive update messages and add demo update events

--- a/tracking-service/src/main/resources/application.properties
+++ b/tracking-service/src/main/resources/application.properties
@@ -12,6 +12,12 @@ mp.messaging.incoming.shipment-created.key.deserializer=org.apache.kafka.common.
 mp.messaging.incoming.shipment-created.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.shipment-created.auto.offset.reset=earliest
 
+mp.messaging.incoming.shipment-updated.connector=smallrye-kafka
+mp.messaging.incoming.shipment-updated.topic=shipment-updated
+mp.messaging.incoming.shipment-updated.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.shipment-updated.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.shipment-updated.auto.offset.reset=earliest
+
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
 #%dev.quarkus.flyway.clean-at-start=true
