--- a/scanner-service/src/main/resources/application.properties
+++ b/scanner-service/src/main/resources/application.properties
@@ -8,9 +8,14 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/demo?currentSchema=
 
 mp.messaging.incoming.shipment-created.connector=smallrye-kafka
 mp.messaging.incoming.shipment-created.topic=shipment-created
-mp.messaging.incoming.shipment-created.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.incoming.shipment-created.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.shipment-created.auto.offset.reset=earliest
+mp.messaging.incoming.shipment-created.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.incoming.shipment-created.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+mp.messaging.outgoing.shipment-updated.connector=smallrye-kafka
+mp.messaging.outgoing.shipment-updated.topic=shipment-updated
+mp.messaging.outgoing.shipment-updated.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.outgoing.shipment-updated.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 
 
