--- a/shipment-service/src/main/resources/application.properties
+++ b/shipment-service/src/main/resources/application.properties
@@ -2,24 +2,18 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=demo
 quarkus.datasource.password=demo
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/demo?currentSchema=shipment
+quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+quarkus.http.port=8081
 
 %dev.quarkus.hibernate-orm.log.sql=true
 %dev.quarkus.hibernate-orm.statistics=true
+# %dev.quarkus.flyway.clean-at-start=true
+quarkus.flyway.migrate-at-start=true
 
 mp.messaging.outgoing.shipment-created.connector=smallrye-kafka
 mp.messaging.outgoing.shipment-created.topic=shipment-created
 mp.messaging.outgoing.shipment-created.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.shipment-created.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
-
-quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
-
-
-# %dev.quarkus.flyway.clean-at-start=true
-%dev.quarkus.flyway.migrate-at-start=true
-
-#%dev.quarkus.datasource.dev-ui.allow-sql=true
-
 kafka.bootstrap.servers=localhost:9092
 
-quarkus.http.port=8081
