--- a/tracking-service/src/main/resources/application.properties
+++ b/tracking-service/src/main/resources/application.properties
@@ -2,9 +2,13 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=demo
 quarkus.datasource.password=demo
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/demo?currentSchema=tracker
+quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+quarkus.http.port=8083
 
 %dev.quarkus.hibernate-orm.log.sql=true
 %dev.quarkus.hibernate-orm.statistics=true
+%dev.quarkus.flyway.migrate-at-start=true
+#quarkus.flyway.clean-at-start=true
 
 mp.messaging.incoming.shipment-created.connector=smallrye-kafka
 mp.messaging.incoming.shipment-created.topic=shipment-created
@@ -18,14 +22,6 @@ mp.messaging.incoming.shipment-updated.key.deserializer=org.apache.kafka.common.
 mp.messaging.incoming.shipment-updated.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.shipment-updated.auto.offset.reset=earliest
 
-quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
-
-#%dev.quarkus.flyway.clean-at-start=true
-%dev.quarkus.flyway.migrate-at-start=true
-
-#%dev.quarkus.datasource.dev-ui.allow-sql=true
-
 kafka.bootstrap.servers=localhost:9092
 
-quarkus.http.port=8083
 
