--- a/scanner-service/build.gradle
+++ b/scanner-service/build.gradle
@@ -13,13 +13,13 @@ dependencies {
     implementation 'io.quarkus:quarkus-jdbc-postgresql'
     implementation 'io.quarkus:quarkus-flyway'
     implementation 'io.quarkus:quarkus-rest'
-    implementation 'io.quarkus:quarkus-scheduler'
     implementation 'io.quarkus:quarkus-rest-jackson'
 
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
+    implementation "io.quarkus:quarkus-container-image-docker"
 
 }
 
