--- a/scanner-service/src/main/resources/application.properties
+++ b/scanner-service/src/main/resources/application.properties
@@ -2,9 +2,14 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=demo
 quarkus.datasource.password=demo
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/demo?currentSchema=scanner
+quarkus.http.port=8082
+quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+
 
 %dev.quarkus.hibernate-orm.log.sql=true
 %dev.quarkus.hibernate-orm.statistics=true
+# %dev.quarkus.flyway.clean-at-start=true
+quarkus.flyway.migrate-at-start=true
 
 mp.messaging.incoming.shipment-created.connector=smallrye-kafka
 mp.messaging.incoming.shipment-created.topic=shipment-created
@@ -17,14 +22,4 @@ mp.messaging.outgoing.shipment-updated.topic=shipment-updated
 mp.messaging.outgoing.shipment-updated.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.outgoing.shipment-updated.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-
-
-quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
-# %dev.quarkus.flyway.clean-at-start=true
-%dev.quarkus.flyway.migrate-at-start=true
-
-#%dev.quarkus.datasource.dev-ui.allow-sql=true
-
 kafka.bootstrap.servers=localhost:9092
-
-quarkus.http.port=8082
