--- a/scanner-service/src/main/resources/application.properties
+++ b/scanner-service/src/main/resources/application.properties
@@ -22,3 +22,4 @@ mp.messaging.outgoing.shipment-updated.topic=shipment-updated
 mp.messaging.outgoing.shipment-updated.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.outgoing.shipment-updated.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
+kafka.bootstrap.servers=localhost:9092
