--- a/shipment-service/src/main/resources/application.properties
+++ b/shipment-service/src/main/resources/application.properties
@@ -14,3 +14,6 @@ mp.messaging.outgoing.shipment-created.connector=smallrye-kafka
 mp.messaging.outgoing.shipment-created.topic=shipment-created
 mp.messaging.outgoing.shipment-created.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.shipment-created.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+kafka.bootstrap.servers=localhost:9092
+
