--- a/tracking-service/src/main/resources/application.properties
+++ b/tracking-service/src/main/resources/application.properties
@@ -22,6 +22,6 @@ mp.messaging.incoming.shipment-updated.key.deserializer=org.apache.kafka.common.
 mp.messaging.incoming.shipment-updated.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.shipment-updated.auto.offset.reset=earliest
 
-
+kafka.bootstrap.servers=localhost:9092
 
 
