--- a/tracking-service/src/main/resources/application.properties
+++ b/tracking-service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ quarkus.http.port=8083
 %dev.quarkus.hibernate-orm.log.sql=true
 %dev.quarkus.hibernate-orm.statistics=true
 %dev.quarkus.flyway.migrate-at-start=true
-#quarkus.flyway.clean-at-start=true
+quarkus.flyway.clean-at-start=true
 
 mp.messaging.incoming.shipment-created.connector=smallrye-kafka
 mp.messaging.incoming.shipment-created.topic=shipment-created
