--- a/shipment-service/src/main/resources/application.properties
+++ b/shipment-service/src/main/resources/application.properties
@@ -7,13 +7,12 @@ quarkus.http.port=8081
 
 %dev.quarkus.hibernate-orm.log.sql=true
 %dev.quarkus.hibernate-orm.statistics=true
-# %dev.quarkus.flyway.clean-at-start=true
+#%dev.quarkus.flyway.clean-at-start=true
 quarkus.flyway.migrate-at-start=true
 
 mp.messaging.outgoing.shipment-created.connector=smallrye-kafka
 mp.messaging.outgoing.shipment-created.topic=shipment-created
-mp.messaging.outgoing.shipment-created.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.shipment-created.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.shipment-created.auto.offset.reset=earliest
 
 kafka.bootstrap.servers=localhost:9092
 
