--- a/tracking-service/src/main/resources/application.properties
+++ b/tracking-service/src/main/resources/application.properties
@@ -8,18 +8,14 @@ quarkus.http.port=8083
 %dev.quarkus.hibernate-orm.log.sql=true
 %dev.quarkus.hibernate-orm.statistics=true
 %dev.quarkus.flyway.migrate-at-start=true
-quarkus.flyway.clean-at-start=true
+#%dev.quarkus.flyway.clean-at-start=true
 
 mp.messaging.incoming.shipment-created.connector=smallrye-kafka
 mp.messaging.incoming.shipment-created.topic=shipment-created
-mp.messaging.incoming.shipment-created.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.incoming.shipment-created.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.shipment-created.auto.offset.reset=earliest
 
 mp.messaging.incoming.shipment-updated.connector=smallrye-kafka
 mp.messaging.incoming.shipment-updated.topic=shipment-updated
-mp.messaging.incoming.shipment-updated.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-mp.messaging.incoming.shipment-updated.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.shipment-updated.auto.offset.reset=earliest
 
 kafka.bootstrap.servers=localhost:9092
