--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,13 +19,12 @@
         timeout: 5s
         retries: 20
 
-      # --- Kafka (Einzelknoten, KRaft, kein ZooKeeper) ---
     kafka:
-      image: bitnami/kafka:3.7
+      image: bitnamilegacy/kafka:3.7
       container_name: peh-kafka
       ports:
-        - "9092:9092"   # Client-Zugriff vom Host (Quarkus dev)
-        - "9094:9094"   # optional: interner Port, falls weitere Container möchten
+        - "9092:9092"
+        - "9094:9094"
       environment:
         - KAFKA_ENABLE_KRAFT=yes
         - KAFKA_CFG_NODE_ID=1
